--- a/index.html
+++ b/index.html
@@ -18,29 +18,21 @@
 
 <div>
 <div class='container'>
-	<div class='header' id='top'>
-	  <ul>
-	  	<li><a id='header-item' href='#'>Policize</a></li> 
-	  	<li><a id='header-item' href='#'>What's Policize?</a></li>
-	  	<li class='pull-right'>
-	  	  <ul class="nav nav-pills pull-right" style='list-style: none; padding-left: 0px;'>
-			<li class="active">
-			   <a href="https://twitter.com/PolicizeTwitter" class="twitter-follow-button" data-show-count="false">Follow @PolicizeTwitter</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
-
-	  </ul>
-	</div>
-
-
-
-
-
-
-
-
-
-
-	<div class='jumbotron' style='text-align: center;' id='twitterhandle'>
+    <div class='header' id='top'>
+      <ul>
+        <li><a id='header-item' href='#'>Policize</a></li> 
+        <li><a id='header-item' href='#'>What's Policize?</a></li>
+        <li class='pull-right'>
+          <ul class="nav nav-pills pull-right" style='list-style: none; padding-left: 0px;'>
+	     <li class="active">
+	       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+	       </script>
+	     </li>
+	   </ul>
+	 </li>
+       </ul>
+       </div>
+       <div class='jumbotron' style='text-align: center;' id='twitterhandle'>
   	  <h1 id='welcome'> Welcome To Policize</h1>
 
   	  <form class='form-inline' role='form' style='margin-top:20px;' method='POST'> 
